fix z-index issues with timetable and navbar

--- a/app/assets/stylesheets/application/_form-popout.css.scss
+++ b/app/assets/stylesheets/application/_form-popout.css.scss
@@ -5,7 +5,7 @@
   position: absolute;
   top: 0;
   width: 250px;
-  z-index: 4000;
+  z-index: $zindexPopover;
   @include box-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
   form {
     margin: 0;
